[package]
name = "rfq"
version = "2.2.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "rfq"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
solana-security-txt = "1.1.1"
spl-token-2022 = { workspace = true }